# HSEPromProg

./: .gitignore
.github/workflows/: github-actions-demo.yml
task-testing-python/tests/test_01/: test_leap.py
task-testing-python/tests/test_03/: forecast-london.json
task2/: run.sh
task4/: CMakeLists.txt  run.sh
task4/A/: index.h  preparing.py
task4/C/: CMakeLists.txt  tests.cpp
task5/: Makefile  requirements.txt
task5/tests/test_01/: test_add.py  test_get_month_days.py
task5/tests/test_02/: test_size_tree.py  test_tree.py
task5/tests/test_03/: test_weather.py
task6/cmake-with-flask/: Dockerfile
task6/dostavim/: Makefile  docker-compose.yml
task6/dostavim/db/: Dockerfile
task6/dostavim/java/: Makefile
task7/cmake-with-flask/: Makefile
task7/dostavim/db/: Makefile
task7/dostavim/java/: Dockerfile  fill-db.sh
task8/: CMakeLists.txt
